--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/storage": "^6.11.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
@@ -13,6 +14,9 @@
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
+    "mime": "^3.0.0",
+    "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22",
     "pg": "^8.11.0",
