--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.0",
     "mime": "^3.0.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22",
