--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/storage": "^6.11.0",
+    "@joi/date": "^2.1.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
