--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.41.0",
     "express": "^4.18.2",
+    "file-type": "^18.5.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mime": "^3.0.0",
